<resources>
    <string name="app_name">Esc</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Esc</string>
    <string name="action_search">חיפוש</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_my_profile">הפרופיל שלי</string>
    <string name="nav_room_history">היסטוריית חדרים</string>
    <string name="nav_top5">TOP 5</string>
    <string name="nav_wish_list">Wishlist</string>
    <string name="nav_manage_rooms">ניהול חדרים בבעלותי</string>
    <string name="nav_settings">הגדרות</string>
    <string name="action_settings">Settings</string>
    <string name="five_stars">חמישה כוכבים</string>
    <string name="four_stars">ארבעה כוכבים</string>
    <string name="three_stars">שלושה כוכבים</string>
    <string name="two_stars">שתי כוכבים</string>
    <string name="one_star">כוכב אחד</string>
    <string name="three_stars_and_above">שלושה כוכבים ומעלה</string>
    <string name="four_stars_and_above">ארבעה כוכבים ומעלה</string>
    <string name="category">קטגוריה</string>
    <string name="rank">דירוג</string>
    <string name="location">מיקום</string>
    <string name="main">ראשי</string>
    <string name="reviews">ביקורות</string>
    <string name="photos">תמונות</string>
    <string name="orders">הזמנות</string>
    <string name="image_edit_title">בחר תמונה</string>
    <string-array name="image_array">
        <item>גלריה</item>
        <item>מצלמה</item>
        <item>ביטול</item>
    </string-array>

    <string name="horror">אימה</string>
    <string name="vr">מציאות מדומה</string>
    <string name="role_playing">משחקי תפקידים</string>
    <string name="performance">פרפורמנס</string>
    <string name="comedy">קומדיה</string>
    <string name="culinary">קולינרי</string>
    <string name="with_actor">עם שחקן</string>
    <string name="without_actor">בלי שחקן</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    >>>>>>> DB
</resources>
